Some changes for alignment of headers and columns and fixed an error in embed search

--- a/web/src/components/Table/Table.css
+++ b/web/src/components/Table/Table.css
@@ -13,7 +13,7 @@ body {
   }
   
   thead {
-    width: auto;
+    width: fit-content !important;
     height: 100px;
     color: black;
   }
